# phylogen

./: .gitignore  README.md  main.py  plot_test.ipynb  pyproject.toml  test.ipynb
benchmarks/: embedding_results.json
benchmarks/embedding/: embedding_results.json  embedding_results.md
benchmarks/tokenizer/: tokenizer_results.json  tokenizer_results.md
data/: README.md  __init__.py  dataset.py  protein_processing.ipynb  proteomes_processing.ipynb
data/bvbrc_data/: README.md  bvbrc_processing.ipynb  download-cds.sh  download-fasta.sh  merge-cds.sh
data/card_data/: README.md  card_processing.ipynb
data/gtdb_data/: README.md  extract_ecoli.py
embedding/: README.md  __init__.py  alibi_embedder.py  benchmark.py  pe_embedder.py  rope_embedder.py
harsh-work/: requirements.txt  requirements_benchmark.txt
harsh-work/docs/: review-1-progress.md
harsh-work/docs/temp/: PhyloGen.md  dataset.md  misc-info.md
harsh-work/results/benchmarks/: README.md  benchmark_results.json
harsh-work/results/models/phylogen_k3/: embedder.pt  (+2 more)
harsh-work/src/: main.py
harsh-work/src/algorithms/: README.md  benchmark.py  bpe_tokenizer.py  dataset.py  model.py  tokenizer.py
phylogen/: README.md  attention.py  block.py  dataset.py  finetune.ipynb  finetune.py  model.py  plot_loss.py  pretrain.ipynb  pretrain.py  train.py
plots/: finetune_loss_edit.py  pretrain_loss.py
tests/: README.md  constrained_generate.py  inference.py  load.py
tokenizer/: README.md  __init__.py  benchmark.py  bpe_tokenizer.py  kmer_tokenizer.py  protein_tokenizer.py  token_length.ipynb  tokenizer.json
(+3 files in other folders)
